// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> <IdWrapper /> should be background default #80878B 1`] = `
.c1 {
  background-color: #80878B;
  color: #fff;
  padding: 5px;
}

.c2:hover .c0 {
  background-color: #1b998e;
}

<styled__IdWrapper
  bgColor="#80878B"
>
  <StyledComponent
    bgColor="#80878B"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "background-color:",
            [Function],
            ";color:#fff;padding:5px;",
          ],
        },
        "displayName": "styled__IdWrapper",
        "render": [Function],
        "styledComponentId": "c0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 c1"
    >
      1
    </div>
  </StyledComponent>
</styled__IdWrapper>
`;

exports[`<Card /> <IdWrapper /> should have default bgColor even null values submitted 1`] = `
.c1 {
  background-color: #80878B;
  color: #fff;
  padding: 5px;
}

.c2:hover .c0 {
  background-color: #1b998e;
}

<styled__IdWrapper
  bgColor="#80878B"
>
  <StyledComponent
    bgColor="#80878B"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "background-color:",
            [Function],
            ";color:#fff;padding:5px;",
          ],
        },
        "displayName": "styled__IdWrapper",
        "render": [Function],
        "styledComponentId": "c0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 c1"
    >
      1
    </div>
  </StyledComponent>
</styled__IdWrapper>
`;

exports[`<Card /> <IdWrapper /> should have different background color if passes as prop 1`] = `
.c1 {
  background-color: lightgreen;
  color: #fff;
  padding: 5px;
}

.c2:hover .c0 {
  background-color: #1b998e;
}

<styled__IdWrapper
  bgColor="lightgreen"
>
  <StyledComponent
    bgColor="lightgreen"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "background-color:",
            [Function],
            ";color:#fff;padding:5px;",
          ],
        },
        "displayName": "styled__IdWrapper",
        "render": [Function],
        "styledComponentId": "c0",
        "target": "div",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 c1"
    >
      1
    </div>
  </StyledComponent>
</styled__IdWrapper>
`;
